--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="www.linkedin.com/in/siddhant-kulkarni-9bb2651b4/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/siddhant-kulkarni-9bb2651b4/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/Sidkul2000" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:sk10841@nyu.edu" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
