Added recent experience and projects

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <li>Design and Analysis of Algorithms</li>
                 <li>Machine Learning</li>
                 <li>Information Vizualization</li>
-                <li>Java Programming</li>
+                <li>Big Data</li>
                 <li>Principles of Database Systems</li>
               </ul>
             </div>
@@ -336,6 +336,15 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Vertically Integrated Projects, New York University</a><br> </h4>
+                <h5 style="text-align:left;">August 2024 - Present</h5>
+                <p style="text-align:left;color:#fff"><em>Member of Large Language Model Development Team</em></p>
+                <ul style="text-align:left;">
+                  <li>Developed time series forecasting models using GPT-2, T5, LLAMA-2 and traditional baselines (LSTM, ARIMA and XGBoost) achieving RMSE scores of 51.4 for GPT-2 and 53.64 for T5 on Apple stock predictions.</li>
+                  <li>Presented findings on LLM-based forecasting, authored a detailed report and proposed next steps integrating quaternion transformers.</li>
+                </ul>
+              </div>
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">New York University, Courant Institute of Mathematical Sciences </a><br> </h4>
                 <h5 style="text-align:left;">August 2024 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Teaching Assistant for Natural Language Processing</em></p>
@@ -400,6 +409,8 @@
 
 
   <!-- Start Project Section -->
+
+
   <section id="portfolio" class="portfolio">
     <div class="container">
 
@@ -418,6 +429,32 @@
       </div> -->
 
       <div class="row portfolio-container">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <center><h4>TuneTether</h4></center>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/spotify.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              
+              <div class="portfolio-links">
+                <a href="projects/spotify.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <center><h4>MapBnB London</h4></center>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/airbnb.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              
+              <div class="portfolio-links">
+                <a href="projects/airbnb.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Revenue Forecasting</h4></center>
