Updated resume link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/12S_0LcKT8g-S3dkq4NL0nfps96Ln8Uzz/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1nWAGCntEg_Sc_pAJr-odOCAZSJSNJ-QC/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -712,7 +712,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["AI Engineer", "Coder", "Developer"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
