Updated jazzify github link

--- a/projects/jazzify.html
+++ b/projects/jazzify.html
@@ -46,7 +46,7 @@
               <h2 style="color:#12d640">Jazzify: AI-driven Jazz Composition</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: Tensorflow, Keras, RNN, Music21, LSTM</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/Sidkul2000/Coursera-Assignments/blob/master/DeepLearning.ai_Course%20-%205%20-%20Sequence%20Models/Improvise_a_Jazz_Solo_with_an_LSTM_Network_v3a.ipynb" target="_blank">Project Link</a></li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/Sidkul2000/Jazzify" target="_blank">Project Link</a></li>
               </ul>
   
               <p>
