Updated stackoverflow bot github link

--- a/projects/nlp.html
+++ b/projects/nlp.html
@@ -46,7 +46,7 @@
               <h2 style="color:#12d640">StackOverflow Assistant Bot</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: TfidfVectorizer, Starspace Embeddings, ChatterBot</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/Sidkul2000/Coursera-Assignments/blob/master/HSE%20NLP%20Course%20Assignments/Week-5/week5_project.ipynb" target="_blank">Project Link</a></li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/Sidkul2000/Stackoverflow_bot" target="_blank">Project Link</a></li>
               </ul>
   
               <p>
